--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.1",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "typescript": "^4.7.2"
   },
   "devDependencies": {
     "@types/node": "^17.0.35",
