--- a/server/package.json
+++ b/server/package.json
@@ -21,10 +21,16 @@
     "typescript": "^4.7.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.2",
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-typescript": "^7.17.12",
     "@types/jest": "^27.5.1",
     "@types/node": "^17.0.35",
     "@types/pg": "^8.6.5",
+    "@types/supertest": "^2.0.12",
+    "babel-jest": "^28.1.0",
     "jest": "^28.1.0",
+    "supertest": "^6.2.3",
     "ts-jest": "^28.0.3",
     "ts-node-dev": "^1.1.8"
   }
