test: circle:ci testing setup

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
 
     steps:
       - checkout
-      - run: Cd into server:
+      - run: Cd into server
           name: Cd into server
           command: cd server
       - run: Install Yarn
