--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.1",
     "helmet": "^5.1.0",
     "joi": "^17.6.0",
+    "moment": "^2.29.3",
     "pg": "^8.7.3",
     "typescript": "^4.7.2"
   },
