setup: heroku deploy

--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,13 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
+    "start": "node ./dist/index.js",
+    "postInstall": "tsc",
     "test": "jest --coverage --detectOpenHandles",
     "dev": "ts-node-dev --respawn --pretty --transpile-only src/index.ts"
+  },
+  "engines": {
+    "node": "18.2.0"
   },
   "keywords": [],
   "author": "",
