--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "node ./dist/index.js",
-    "postInstall": "tsc",
+    "build": "tsc",
     "test": "jest --coverage --detectOpenHandles",
     "dev": "ts-node-dev --respawn --pretty --transpile-only src/index.ts"
   },
